--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
       </section>
 
       <section>
+        <h2>QR 코드</h2>
+        <div class="qr-code-container">
+          <img src="static/sooing-hair-qr.png" alt="정수깅 헤어 QR 코드" style="width: 200px; height: 200px; border-radius: 8px;">
+          <p>스캔하여 웹사이트 방문하기</p>
+        </div>
+      </section>
+
+      <section>
         <h2>포트폴리오</h2>
         <div class="portfolio-grid">
           <div class="portfolio-item">
@@ -309,5 +317,8 @@
       </div>
     </div>
   </div>
+  <footer>
+    <p>&copy; 2024 정수깅 헤어. All rights reserved.</p>
+  </footer>
 </body>
 </html> 
