Add QR code to footer

--- a/index.html
+++ b/index.html
@@ -317,8 +317,12 @@
       </div>
     </div>
   </div>
-  <footer>
+  <footer style="text-align: center; margin-top: 40px; padding: 20px; background-color: #333; color: #fff; border-radius: 8px;">
     <p>&copy; 2024 정수깅 헤어. All rights reserved.</p>
+    <div class="qr-code-container" style="margin-top: 20px;">
+      <img src="static/sooing-hair-qr.png" alt="정수깅 헤어 QR 코드" style="width: 150px; height: 150px; border-radius: 8px;">
+      <p style="margin-top: 10px;">스캔하여 웹사이트 방문하기</p>
+    </div>
   </footer>
 </body>
 </html> 
