--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
       <section>
         <h2>오시는 길</h2>
+        <p style="margin-bottom: 15px; font-size: 1.1em; color: #666;">대전 서구 계룡로509번길 27, 1층 | 탄방역 2번 출구 도보 298m</p>
         <div id="map" style="width:100%;height:400px;border-radius:8px;"></div>
         <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=n3adrc658p"></script>
         <script>
