Add Open Graph meta tags for social media preview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>정수깅 헤어</title>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://sooing.hair/">
+  <meta property="og:title" content="정수깅 헤어">
+  <meta property="og:description" content="전문적인 헤어 디자인과 스타일링, 고객 맞춤형 서비스를 제공하는 정수깅 헤어입니다.">
+  <meta property="og:image" content="https://sooing.hair/static/stylist.jpeg">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://sooing.hair/">
+  <meta property="twitter:title" content="정수깅 헤어">
+  <meta property="twitter:description" content="전문적인 헤어 디자인과 스타일링, 고객 맞춤형 서비스를 제공하는 정수깅 헤어입니다.">
+  <meta property="twitter:image" content="https://sooing.hair/static/stylist.jpeg">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-45KHVTH786"></script>
   <script>
